<resources>
    <string name="app_name">Liam Gallagher Soundboard</string>
    <string name="action_settings">Settings</string>
    <string name="main_label">Select an LG sound clip</string>
    <string name="sound1_btn">Course he did</string>
    <string name="sound2_btn">Best band in the world</string>
    <string name="sound3_btn">Whos first then</string>
    <string name="sound4_btn">Smash the gaff up</string>
    <string name="sound5_btn">How many haircuts</string>
    <string name="sound6_btn">Bump into him one day</string>
    <string name="sound7_btn">Whooppee</string>
    <string name="sound8_btn">Ginger bollocks</string>
    <string name="sound9_btn">Buy Pretty Green</string>
    <string name="sound10_btn">Sh*te life</string>
    <string name="sound11_btn">Bring back those days</string>
    <string name="sound12_btn">Sally can wait</string>
    <string name="sound13_btn">Scruffy thing</string>
    <string name="sound14_btn">Stop asking questions</string>
    <string name="sound15_btn">Always wear a condom</string>
    <string name="sound16_btn">Very good looking</string>
    <string name="sound17_btn">Give me a papercut</string>
    <string name="sound18_btn">Godlike</string>
    <string name="sound19_btn">"They're all in pain"</string>
    <string name="sound20_btn">Licking his face</string>
</resources>

<!--    sounds[0] = sp.load(this, R.raw.course_he_fuckin_did, 1);-->
<!--    sounds[1] = sp.load(this, R.raw.best_band_in_the_world, 1);-->
<!--    sounds[2] = sp.load(this, R.raw.right_then_whos_first_then, 1);-->
<!--    sounds[3] = sp.load(this, R.raw.smashed_the_gaff_up, 1);-->
<!--    sounds[4] = sp.load(this, R.raw.how_many_haircuts_you_got_there, 1);-->
<!--    sounds[5] = sp.load(this, R.raw.cant_wait_to_bump_into_him_one_day, 1);-->
<!--    sounds[6] = sp.load(this, R.raw.whoppee, 1);-->
<!--    sounds[7] = sp.load(this, R.raw.more_than_ginger_bollocks, 1);-->
<!--    sounds[8] = sp.load(this, R.raw.they_should_buy_pg, 1);-->
<!--    sounds[9] = sp.load(this, R.raw.sh_te_life, 1);-->
<!--    sounds[10] = sp.load(this, R.raw.bring_back_those_f_cking_days, 1);-->
<!--    sounds[11] = sp.load(this, R.raw.so_sally_can_wait, 1);-->
<!--    sounds[12] = sp.load(this, R.raw.scruffy___ing, 1);-->
<!--    sounds[13] = sp.load(this, R.raw.stop_asking_questions, 1);-->
<!--    sounds[14] = sp.load(this, R.raw.always_wear_a_condom, 1);-->
<!--    sounds[15] = sp.load(this, R.raw.being_29_and_very_good_looking, 1);-->
<!--    sounds[16] = sp.load(this, R.raw.give_me_a_papercut, 1);-->
<!--    sounds[17] = sp.load(this, R.raw.godlike, 1);-->
<!--    sounds[18] = sp.load(this, R.raw.theyre_all_in_pain, 1);-->
<!--    sounds[19] = sp.load(this, R.raw.licking_his_face, 1);-->